// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div>
  <div
    class="frame hidden"
  >
    <img
      alt="test image"
      src="test"
    />
    <svg
      viewBox="0 0 1.3333333333333333 1"
    />
  </div>
</div>
`;

exports[`should unhide on image load 1`] = `
<div>
  <div
    class="frame"
  >
    <img
      alt="test image"
      src="test"
    />
    <svg
      viewBox="0 0 1.3333333333333333 1"
    />
  </div>
</div>
`;
